--- a/03_Second_Stage/Generate database/03_01_process_final_database.Rmd
+++ b/03_Second_Stage/Generate database/03_01_process_final_database.Rmd
@@ -44,7 +44,16 @@ demo.dim      <- social.dets$demographic_dimension
  
  
  
-
+ # 2.3 geographics variable
+ db.geo    <-  readRDS("geo_measure.rds") %>% 
+               ungroup() %>% 
+               arrange(reg,prov)
+ 
+ 
+ # 2.4 geographics variable
+ db.eco.2    <-  readRDS("economics_2017.rds") %>% 
+               ungroup() %>% 
+               arrange(reg,prov)
 
 
 ```
@@ -67,14 +76,15 @@ db.men       <- readRDS("bd_deaths_postModel_m_3_16_3_xpop.rds")                
   
   
 db.men.post  <- db.men                                                               %>% 
-                left_join(social.dets,by     =c("reg"="dep","prov"="prov"))          %>% 
+                left_join(social.dets ,by          =c("reg"="dep","prov"="prov"))          %>% 
                 #climatic variables
-                left_join(db.tmx,by          =c( "reg"="reg" , "prov"="prov",
-                                                "year"="year","month"="month"))      %>% 
-                left_join(db.prcp,by         =c( "reg"="reg" , "prov"="prov",
-                                                "year"="year","month"="month"))      %>% 
-
-
+                left_join(db.tmx      ,by          =c(  "reg"="reg" , "prov"="prov",
+                                                       "year"="year","month"="month"))      %>% 
+                left_join(db.prcp     ,by         = c(   "reg"="reg" , "prov"="prov",
+                                                       "year"="year","month"="month"))      %>% 
+             
+                left_join(db.geo      ,by         =c( "reg"="reg" , "prov"="prov"))        %>%  
+                left_join(db.eco.2    ,by         =c( "reg"="reg" , "prov"="prov"))        %>% 
                 mutate( std.prcp  = scale.default(prcp),
                         std.tmx   = scale.default(temp) # nodos 1era version del modelamiento no resulto relevante
                 )
@@ -109,7 +119,8 @@ db.men.post  <- db.men                                                          
                 left_join(db.prcp,by         =c( "reg"="reg" , "prov"="prov",
                                                 "year"="year","month"="month"))      %>% 
 
-
+                left_join(db.geo      ,by         =c( "reg"="reg" , "prov"="prov"))        %>%  
+                left_join(db.eco.2    ,by         =c( "reg"="reg" , "prov"="prov"))        %>% 
                 mutate( std.prcp  = scale.default(prcp),
                         std.tmx   = scale.default(temp) # nodos 1era version del modelamiento no resulto relevante
                 )
@@ -147,7 +158,8 @@ db.women.post  <- db.women                                                      
                 left_join(db.prcp,by         =c( "reg"="reg" , "prov"="prov",
                                                 "year"="year","month"="month"))      %>% 
 
-
+                left_join(db.geo      ,by         =c( "reg"="reg" , "prov"="prov"))        %>%  
+                left_join(db.eco.2    ,by         =c( "reg"="reg" , "prov"="prov"))        %>% 
                 mutate( std.prcp  = scale.default(prcp),
                         std.tmx   = scale.default(temp) # nodos 1era version del modelamiento no resulto relevante
                 )
@@ -180,7 +192,8 @@ db.women.post  <- db.women                                                      
                                                 "year"="year","month"="month"))      %>% 
                 left_join(db.prcp,by         =c( "reg"="reg" , "prov"="prov",
                                                 "year"="year","month"="month"))      %>% 
-
+                left_join(db.geo      ,by         =c( "reg"="reg" , "prov"="prov"))        %>%  
+                left_join(db.eco.2    ,by         =c( "reg"="reg" , "prov"="prov"))        %>% 
 
                 mutate( std.prcp  = scale.default(prcp),
                         std.tmx   = scale.default(temp) # nodos 1era version del modelamiento no resulto relevante
